--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -66,6 +66,7 @@ runs:
         spack -e ci find
         spack -e ci install --use-buildcache only
         echo "$PWD/dependencies/bin" >> "$GITHUB_PATH"
+        echo "CMAKE_PREFIX_PATH=$PWD/dependencies" >> "$GITHUB_ENV"
 
     - name: Install Geant4 data
       shell: bash
@@ -79,5 +80,5 @@ runs:
         ls -al
         venv_dir="$PWD/dependencies/venv"
         python3 -m venv "$venv_dir"
-        echo "${venv_dir}/bin/" >> "$GITHUB_PATH"
+        echo "${venv_dir}/bin" >> "$GITHUB_PATH"
         ls -al "${venv_dir}/bin"
