--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -61,10 +61,16 @@ runs:
     - name: Create spack environment
       shell: bash
       run: |
+        if [[ $(spack arch --platform) == darwin ]]; then
+          NCPUS=$(sysctl -n hw.ncpu)
+        else
+          NCPUS=$(nproc)
+        fi
+
         spack env create ci spack.lock --with-view $PWD/dependencies
         spack -e ci spec
         spack -e ci find
-        spack -e ci install --use-buildcache only
+        spack -n$NCPUS -e ci install --use-buildcache only
         echo "$PWD/dependencies/bin" >> "$GITHUB_PATH"
         echo "CMAKE_PREFIX_PATH=$PWD/dependencies" >> "$GITHUB_ENV"
         echo "LD_LIBRARY_PATH=${destination}/lib" >> "$GITHUB_ENV"
