--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -70,7 +70,7 @@ runs:
         time spack env create ci spack.lock --with-view $PWD/dependencies
         time spack -e ci spec
         time spack -e ci find
-        time spack -n$NCPUS -e ci install --use-buildcache only
+        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci install --use-buildcache only
         echo "$PWD/dependencies/bin" >> "$GITHUB_PATH"
         echo "CMAKE_PREFIX_PATH=$PWD/dependencies" >> "$GITHUB_ENV"
         echo "LD_LIBRARY_PATH=${destination}/lib" >> "$GITHUB_ENV"
@@ -83,7 +83,8 @@ runs:
     - name: Install Geant4 data
       shell: bash
       run: |
-        time spack -e ci install --add geant4-data
+        time spack -e ci add geant4-data
+        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci install
         "${GITHUB_ACTION_PATH}/with_spack_env.sh" ci env | grep G4 >> "$GITHUB_ENV"
 
     - name: Prepare python environment
