--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -39,11 +39,16 @@ runs:
         arch=$(spack arch --family)
         if [[ $arch == darwin* ]]; then
           lock_file="spack-${arch}-xcode${{ inputs.xcode-version }}.lock"
+          lock_file_g4="spack-${arch}-xcode${{ inputs.xcode-version }}-geant4-data.lock"
         else
           lock_file="spack-${arch}.lock"
+          lock_file_g4="spack-${arch}-geant4-data.lock"
         fi
+
         echo "Lock file: ${lock_file}"
+        echo "Lock file G4: ${lock_file_g4}"
         echo "SPACK_LOCK_FILE=${lock_file}" >> "$GITHUB_ENV"
+        echo "SPACK_LOCK_FILE_G4=${lock_file_g4}" >> "$GITHUB_ENV"
 
     - name: Setup Xcode version
       if: startsWith(runner.os, 'macos')
@@ -51,27 +56,36 @@ runs:
       with:
         xcode-version: "${{ inputs.xcode-version }}"
 
-    - name: Get spack lock file from tag
+    - name: Get spack lock files from tag
       shell: bash
       run: |
         url="https://github.com/acts-project/ci-dependencies/releases/download/${{ inputs.dependency-tag }}/${SPACK_LOCK_FILE}"
         echo "URL: ${url}"
         curl -L -o spack.lock $url
+        g4url="https://github.com/acts-project/ci-dependencies/releases/download/${{ inputs.dependency-tag }}/${SPACK_LOCK_FILE_G4}"
+        echo "URL: ${g4url}"
+        curl -L -o spack-g4.lock $g4url
 
     - name: Create spack environment
       shell: bash
       run: |
-        # if [[ $(spack arch --platform) == darwin ]]; then
-        #   NCPUS=$(sysctl -n hw.ncpu)
-        # else
-        #   NCPUS=$(nproc)
-        # fi
-        NCPUS=16 # we're only downloading
+        NCPUS=32 # we're only downloading
 
-        time spack env create ci spack.lock --with-view $PWD/dependencies
+        time spack env create ci spack.lock --with-view $PWD/dependencies &
+        time spack env create ci-g4 spack-g4.lock &
+        wait
+
         time spack -e ci spec
         time spack -e ci find
+
         time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci install --use-buildcache only
+        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci-g4 install
+
+        "${GITHUB_ACTION_PATH}/with_spack_env.sh" ci-g4 env | grep G4 >> "$GITHUB_ENV"
+
+    - name: Configure downstream environment
+      shell: bash
+      run: |
         echo "$PWD/dependencies/bin" >> "$GITHUB_PATH"
         echo "CMAKE_PREFIX_PATH=$PWD/dependencies" >> "$GITHUB_ENV"
         echo "LD_LIBRARY_PATH=${destination}/lib" >> "$GITHUB_ENV"
@@ -80,14 +94,6 @@ runs:
         # set_env ROOT_INCLUDE_PATH "${destination}/include/Geant4"
         # Pythia8 looks for settings in this directory
         echo "PYTHIA8DATA=${destination}/share/Pythia8/xmldoc" >> "$GITHUB_ENV"
-
-    - name: Install Geant4 data
-      shell: bash
-      run: |
-        time spack -e ci add geant4-data
-        time spack -e ci concretize
-        time ${GITHUB_ACTION_PATH}/parallel.sh 10 spack -e ci install
-        "${GITHUB_ACTION_PATH}/with_spack_env.sh" ci env | grep G4 >> "$GITHUB_ENV"
 
     - name: Prepare python environment
       shell: bash
