--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -8,7 +8,7 @@ inputs:
   dependency-tag:
     description: "Which dependency tag to use"
     required: true
-    default: "v6-test"
+    default: "v6-test3"
 runs:
   using: "composite"
   steps:
@@ -78,8 +78,9 @@ runs:
         time spack -e ci spec
         time spack -e ci find
 
-        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci install --use-buildcache only
-        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci-g4 install
+        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci install --use-buildcache only &
+        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci-g4 install &
+        wait
 
         "${GITHUB_ACTION_PATH}/with_spack_env.sh" ci-g4 env | grep G4 >> "$GITHUB_ENV"
 
