--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -72,15 +72,17 @@ runs:
         NCPUS=32 # we're only downloading
 
         time spack env create ci spack.lock --with-view $PWD/dependencies &
+        pid1=$!
         time spack env create ci-g4 spack-g4.lock &
-        wait
+        pid2=$!
+        wait $pid1
+        wait $pid2
 
         time spack -e ci spec
         time spack -e ci find
 
-        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci install --use-buildcache only &
-        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci-g4 install &
-        wait
+        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci install --use-buildcache only
+        time ${GITHUB_ACTION_PATH}/parallel.sh $NCPUS spack -e ci-g4 install
 
         "${GITHUB_ACTION_PATH}/with_spack_env.sh" ci-g4 env | grep G4 >> "$GITHUB_ENV"
 
