--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -37,7 +37,7 @@ jobs:
           lfs: true
 
       - name: Install dependencies
-        uses: CI/dependencies/setup.sh
+        run: CI/dependencies/setup.sh
 
       - run: env
       - run: |
