--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -20,7 +20,7 @@ env:
   CCACHE_DIR: ${{ github.workspace }}/ccache
   CCACHE_MAXSIZE: 500M
   CCACHE_KEY_SUFFIX: r2
-  DEPENDENCY_TAG: v5
+  DEPENDENCY_TAG: v6-test3
 
 jobs:
   linux_ubuntu:
