--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -48,8 +48,9 @@ jobs:
           echo $PATH
           ls -al
           ls -al dependencies/
-          ls -al dependencies/venv
-          ls -al dependencies/venv/bin
+          ls -al dependencies/view
+          ls -al dependencies/view/venv
+          ls -al dependencies/view/venv/bin
           which python3
           python3 -m pip install jinja2 pyyaml
 
