--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -348,6 +348,9 @@ jobs:
           restore-keys: |
             ccache-${{ runner.os  }}-${{ github.job }}-${{ env.CCACHE_KEY_SUFFIX }}-
 
+      - uses: mxschmitt/action-tmate@v3
+        # if: failure()
+
       - name: Configure
         run: |
           ccache -z
