--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -349,7 +349,7 @@ jobs:
           restore-keys: |
             ccache-${{ runner.os  }}-${{ github.job }}-${{ env.CCACHE_KEY_SUFFIX }}-
 
-      - uses: mxschmitt/action-tmate@v3
+      # - uses: mxschmitt/action-tmate@v3
         # if: failure()
 
 
